// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders a dateTime input 1`] = `
"<div>
  <label />
  <input type=\\"datetime-local\\" id={[undefined]} value={[undefined]} onChange={[undefined]} />
</div>"
`;

exports[`Input renders a submit input 1`] = `
"<div>
  <label />
  <input type=\\"submit\\" id={[undefined]} value={[undefined]} onChange={[undefined]} />
</div>"
`;

exports[`Input renders a text input 1`] = `
"<div>
  <label />
  <input type=\\"text\\" id={[undefined]} value={[undefined]} onChange={[undefined]} />
</div>"
`;
